api/swim_form/src/tests/derive/form/generic.stderr
error[E0599]: the method `as_value` exists for struct `S<Valid, Invalid>`, but its trait bounds were not satisfied
  --> src/tests/derive/form/generic.rs:36:15
   |
26 |     struct S<A, B> {
   |     --------------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<Valid, Invalid>: Form`
   |     doesn't satisfy `S<Valid, Invalid>: StructuralReadable`
   |     doesn't satisfy `S<Valid, Invalid>: StructuralWritable`
...
36 |     let _ = s.as_value();
   |               ^^^^^^^^ method cannot be called on `S<Valid, Invalid>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `S<Valid, Invalid>: StructuralReadable`
           which is required by `S<Valid, Invalid>: Form`
           `S<Valid, Invalid>: StructuralWritable`
           which is required by `S<Valid, Invalid>: Form`
note: the following traits must be implemented
  --> src/structural/read/mod.rs
   |
   |  / pub trait StructuralReadable: RecognizerReadable {
   |  |     fn read_extant() -> Result<Self, ReadError> {
   |  |         let mut rec = Self::make_recognizer();
   |  |         rec.feed_event(ReadEvent::Extant)
...   |
   |  |     }
   |  | }
   |  |_^
   |
  ::: src/structural/write/mod.rs
   |
   | /  pub trait StructuralWritable {
   | |      /// The number of attributes that will be written by this instance.
   | |      fn num_attributes(&self) -> usize;
   | |
...  |
   | |      }
   | |  }
   | |__^
note: the following traits must be implemented
  --> src/structural/read/mod.rs
   |
   |  / pub trait StructuralReadable: RecognizerReadable {
   |  |     fn read_extant() -> Result<Self, ReadError> {
   |  |         let mut rec = Self::make_recognizer();
   |  |         rec.feed_event(ReadEvent::Extant)
...   |
   |  |     }
   |  | }
   |  |_^
   |
  ::: src/structural/write/mod.rs
   |
   | /  pub trait StructuralWritable {
   | |      /// The number of attributes that will be written by this instance.
   | |      fn num_attributes(&self) -> usize;
   | |
...  |
   | |      }
   | |  }
   | |__^
